tests/e2e/trust/verify-signed-images/bad-pod-unsigned.yaml
apiVersion: v1
kind: Pod
metadata:
  name: unsigned-bad-pod
spec:
  containers:
    - name: app
      image: ghcr.io/gharbiyasmine/kyverno-demo-unsigned:1.0.0
