tests/e2e/trust/verify-signed-images/good-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: signed-good-pod
spec:
  containers:
    - name: app
      image: kyverno-demo:1.0.0
